# Forge

./: .gitignore  ALIGNMENT_PLAN.md  AUDIT.md  BACKLOG.md  BRAND-LORA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  PLAN_V2.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: tests.yml
archive/: make-thumbnail.py  prompt-forge.py  transcribe-video.sh
brand/: voices.json
brand/gond/: style.json
brand/loras/: README.md
brand/madhubani/: animals.json  boost_prompts.json  labels_v1.json  labels_v2.json  madhubani_likeness_v1.npz  madhubani_likeness_v1.report.json  madhubani_likeness_v2.npz  madhubani_likeness_v2.report.json  masters.json  palette.json  poses.json  species_features.json  species_iconography.json
brand/madhubani/kb/: INDEX.md  _bibliography.md
brand/madhubani/kb/_body_types/: bird.md  cetacean.md  heavy-quadruped.md  lean-predator.md  lean-quadruped.md  primate.md  serpent.md  stocky-omnivore.md
brand/madhubani/kb/_families/: bovidae.md  cervidae.md  elapidae.md  felidae.md  phasianidae.md  suidae.md  ursidae.md
brand/madhubani/kb/_orders/: aves.md  carnivora.md  cetacea.md  primates.md  serpentes.md
brand/madhubani/kb/species/: cobra.md  peacock.md  snow-leopard.md  tiger.md
brand/madhubani/learning/: runs.jsonl  species_winning_prompts.md
brand/parks/: _index.json
brand/presets/: batman-noir.json  cinematic.json  darksiders.json  documentary.json  editorial.json  tartakovsky.json  thumbnail-bold.json  whatsapp-senior.json
brand/presets/_backups/: cinematic.json  editorial.json  tartakovsky.json  whatsapp-senior.json
brand/presets/templates/: semantic-preset-template.json
brand/prompts/: library.json  preset_authoring_template.json  whatsapp_jokes.json
brand/references/: README.md
brand/references/madhubani/: CURATION_GUIDE.md  _audit.py
brand/references/madhubani/_general/: 34545016-kohbar-auspicious-marriage-diagram-dh93.jpg.attribution.json  _example_attribution.json  (+49 more)
brand/styles/: _index.json
brand/styles/gond/: style.json
brand/styles/madhubani/: protocol.md  style.json
brand/styles/warli/: style.json
docs/: A2_CORPUS_CHECK_2026-05-20.md  ARCHITECTURE.md  ART_REASONING_ENGINE.md  ART_REASONING_ENGINE_PLAN.md  AUDIOBOOK_API.md  AUDIOBOOK_HANDOFF.md  BACKLOG_DAY_2026-05-20.md  BOOK_LOCALIZATION_AUDIT_HANDOFF.md  COLORING_BOOK_SCIENCE.md  CULTURAL_HERITAGE_ATTRIBUTION.md  CULTURAL_HERITAGE_ATTRIBUTION_GOND.md  CULTURAL_HERITAGE_ATTRIBUTION_WARLI.md  DESKTOP_PICKUP.md  DOCUMENTATION_PROTOCOL.md  FEATURES.md  FEATURE_TEMPLATE.md  FORGE_PORTFOLIO_PLAN.md  FORGE_QUALITY_SPEED_AUDIT_2026-05-19.md  FORGE_RESET_2026-05-22.md  IMAGE_INVENTORY_2026-05-20.md  INDEX.md  LORA_TONIGHT_PLAYBOOK.md  LORA_TRAINING_RECIPE.md  MADHUBANI_ART_IDENTITY.md  MADHUBANI_BIBLIOGRAPHY.md  MASTERY_PLAN.md  MECHANISMS.md  MINIMALIST_TSHIRT_ENGINE.md  MINIMAL_ANIMAL_LINES.md  OSS_READINESS_AGENT_HANDOFF.md  PAPER_OUTLINE.md  PRESET_PRECISION_IMPROVEMENT_HANDOFF.md  PRESET_PROMPT_TEMPLATE.md  QC_AGREEMENT_STUDY.md  QUALITY_FINDINGS_2026-05-20.md  RHINO_E2E_TEST_2026-05-20.md  ROADMAP.md  SCHEMA.md  TRANSLATION_AGENT_HANDOFF.md  WHATSAPP_JOKE_FACTORY_HANDOFF.md
docs/catalog/: CATALOG_PLAN.md  INDEX.md  PROMPT_GRAMMAR.md  RUBRIC.md  SKILL.md  WEB_UI_V2_PLAN.md  WORKFLOW.md
series/: example.json  petit-manan.json
system/: com.kaayko.videoprep.plist
tests/: __init__.py  test_a1_5_a1_6.py  test_a6_default_refine.py  test_art_reasoning_engine.py  test_best_of_n.py  test_engine_qc.py  test_feedback_memory.py  test_input_adapter.py  test_madhubani_a3_a4.py  test_madhubani_qc.py  test_madhubani_qc_extended.py  test_madhubani_workflow.py  test_minimal_animal_engine.py  test_minimalist_tshirt_engine.py  test_mockup_compositor.py  test_runtime.py  test_species_iconography.py  test_translate_quality.py  test_translate_web.py  test_whatsapp_joke_factory.py
training/madhubani_lora/: DATASET.md  train.json
training/madhubani_lora_v2/: DATASET.md  HELD_OUT.json  MANIFEST.json  train.json
